# filesystem

./: .appveyor.yml  .cirrus.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  filesystem.h  filesystem.hpp
.ci/: unix-build.sh  unix-test.sh
.github/workflows/: build_cmake.yml
cmake/: GhcHelper.cmake  config.cmake.in
examples/: CMakeLists.txt  dir.cpp  du.cpp
include/ghc/: filesystem.hpp  fs_fwd.hpp  fs_impl.hpp  fs_std.hpp  fs_std_fwd.hpp  fs_std_impl.hpp
src/: filesystem.cpp
test/: CMakeLists.txt  filesystem_test.cpp  impl_test.cpp  multi1.cpp  multi2.cpp
